# hydra-gateway

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
Docker/: Dockerfile  docker-compose.yml
migrations/: 001_initial.sql
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: mod.rs
src/api/dto/: common_dto.rs  liquidity_dto.rs  mod.rs  pool_dto.rs  swap_dto.rs
src/api/handlers/: liquidity.rs  mod.rs  pool.rs  swap.rs  system.rs
src/domain/: event_bus.rs  mod.rs  pool_entry.rs  pool_event.rs  pool_id.rs  pool_registry.rs
src/persistence/: mod.rs  models.rs  postgres.rs
src/service/: mod.rs  pool_service.rs
src/ws/: connection.rs  handler.rs  messages.rs  mod.rs  subscription.rs
